# motox

./: .gitignore  MODERNIZATION_PLAN.md  README.md
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json
backend/database/: init.sql
backend/src/: index.ts
docs/: INTEGRATION_LOG.md  POC_STATUS.md
docs/guides/: BACKEND_SETUP_GUIDE.md  GETTING_STARTED.md  WEB_BUILD_GUIDE.md
mobile/: README.md  capacitor.config.ts  package.json
web/: BUILD_NOTES.md  README.md  build.sh  package.json  tsconfig.json
web/emscripten/: CMakeLists.txt  post.js  pre.js  shell.html  web_main.cpp  web_platform.h  web_stubs.cpp
web/public/: index.html  manifest.json  service-worker.js
